[metadata]
author = Nikolaos Korasidis
author_email = renelvon@gmail.com
classifiers = 
        Development Status :: 4 - Beta
        Framework :: Twisted
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: Implementation :: CPython
        Topic :: System :: Networking
description = A Twisted extension implementing RUDP
keywords = rudp twisted reliable
license = MIT
license_file = LICENSE
maintainer = Nikolaos Korasidis
maintainer_email = renelvon@gmail.com
name = txrudp
url = https://github.com/Renelvon/txrudp
zip_safe = false

[bdist_wheel]
universal=0

[options]
install_requires =
    enum34
    protobuf
    twisted
tests_require =
    check-manifest>=0.38
    coverage
    nose
    mock
    pyroma>=2.4
include_package_data: true
